--- a/oef1/tabel-openingsuren.html
+++ b/oef1/tabel-openingsuren.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="tabel-openingsuren.css">
   <title>Tabel Openingsuren</title>
 </head>
 
@@ -14,38 +15,38 @@
   <table>
     <tr>
       <th></th>
-      <th colspan="2">Openingsuren</th>
+      <th colspan="2" id="Openingsuren">OPENINGSUREN</th>
     </tr>
     <tr>
-      <td>Maandag</td>
+      <th>Maandag</th>
       <td>10-12</td>
       <td>14-16</td>
     </tr>
     <tr>
-      <td>Dinsdag</td>
+      <th>Dinsdag</th>
       <td>gesloten</td>
       <td>14-16</td>
     </tr>
     <tr>
-      <td>Woensdag</td>
+      <th>Woensdag</th>
       <td colspan="2">9-18</td>
     </tr>
     <tr>
-      <td>Donderdag</td>
+      <th>Donderdag</th>
       <td>gesloten</td>
       <td>14-20</td>
     </tr>
     <tr>
-      <td>Vrijdag</td>
+      <th>Vrijdag</th>
       <td>10-12</td>
       <td>gesloten</td>
     </tr>
     <tr>
-      <td>Zaterdag</td>
-      <td rowspan="2">gesloten</td>
+      <th>Zaterdag</th>
+      <td rowspan="2" colspan="2">gesloten</td>
     </tr>
     <tr>
-      <td>Zondag</td>
+      <th>Zondag</th>
     </tr>
     <caption>Openingsuren Postkantoor</caption>
   </table>
