--- a/form-imdb.html
+++ b/form-imdb.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Zoek op IMDB</h1>
-    <form action="https://www.imdb.com/find">
+    <form action="https://www.imdb.com/find" method="get">
         <input type="text" name="zoekformulier" id="zoekformulier" placeholder="Zoek op IMDB">
         <input type="submit" value="Zoeken">
     </form>
