--- a/tabel_alternatief/tabel.html
+++ b/tabel_alternatief/tabel.html
@@ -10,8 +10,8 @@
     <h1>Tabellen en CSS</h1>
     <table>
         <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
+            <th id="Firstname">Firstname</th>
+            <th id="Lastname">Lastname</th>
             <th>Course</th>
         </tr>
         <tr>
